force-app/main/default/objects/WL_Product2__c/WL_Product2__c.object-meta.xml
<CustomObject>
    <label>WL_Product2</label>
    <nameField>
        <label>WL_Product2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WL_Product2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>