force-app/main/default/objects/WL_Product2__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>