force-app/main/default/objects/WL_Product2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_ID__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>